--- a/faice-cc/tds-experiment.json.template
+++ b/faice-cc/tds-experiment.json.template
@@ -71,16 +71,16 @@
   "meta_data": {
     "applications": {
       "docker.io/curiouscontainers/cc-tds-app:0.11": {
-        "src_type": "git",
-        "app_type": "docker",
+        "description": "Matlab TDS is an implementation of the Time Delay Stability algorithm. It is used in sleep medicine to determine the link strength between signals in a polysomnographic recording in EDF format. The Matlab TDS software is developed at CBMI (HTW Berlin - University of Applied Sciences)",
+        "repository_type": "git",
+        "repository_config": {
+          "clone_url": "https://github.com/somnonetz/cc-tds-app.git",
+          "commit": ""
+        },
         "build_type": "docker",
         "build_config": {
           "build_command": "bash ./build.sh",
           "dockerfile_path": "./Dockerfile"
-        },
-        "src_config": {
-          "clone_url": "https://github.com/somnonetz/cc-tds-app.git",
-          "commit": "38c92ecb3ed75b4b36dd94ed7227bf89559f5475"
         }
       }
     },
